--- a/FIrst.html
+++ b/FIrst.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First website repository</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
+    <h1>My first website</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex nostrum molestias illo. Excepturi, perferendis, placeat dignissimos cumque veritatis officia necessitatibus, nam accusamus sapiente eum voluptatibus nostrum explicabo enim! Sunt, deserunt?</p>
+
     <p>this is first repository to my website</p>
+    
 </body>
 </html>
